[tool.poetry]
name = "django-uml"
version = "1.0.0"
description = ""
authors = ["Thijs Baaijen <Thijss@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
django-extensions = "^3.1.5"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"
pygraphviz = "^1.8"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pylint-django = "^2.5.0"
black = "^22.1.0"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MASTER']
load-plugins = "pylint_django"
django-settings-module="config.settings.test"
disable=[
  "duplicate-code", # disabled since it detects too many false positives
]
[tool.coverage.report]
omit = [
  "*/config/settings*",
]
